@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T00:55:04Z",
+  "timestamp" : "2022-05-10T16:18:45Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 292,
-  "uniques" : 151,
+  "count" : 293,
+  "uniques" : 152,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -51,6 +51,13 @@
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 2,
       "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
